[tool.poetry]
name = "telegrambot-tocloud"
version = "0.1.0"
description = ""
authors = ["Alejandro Hernandez <alejandrojaez@outlook.com>"]
readme = "README.md"
packages = [{include = "telegrambot_tocloud"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
